Mesh cage appears outside of Clipping Region in Edit mode in Material and Render preview #76894

Closed
opened 2020-05-19 20:31:37 +02:00 by item412 · 16 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.83 (sub 17), branch: master, commit date: 2020-05-15 17:29, hash: e5ace51295
Worked: 2.81a

Short description of error
In Edit mode vertices/edges/faces appear outside of Clipping Region but can't be selected.

cfc18888682cee6580bb31c3751bbee6.png

2.81a d52f58073a71dc46b404b3cf6ff85f12.png

2.83 f4787fb04f7e5f97dbc32ecdbf19c35c.png

ClipBug.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.83 (sub 17), branch: master, commit date: 2020-05-15 17:29, hash: `e5ace51295` Worked: 2.81a **Short description of error** In Edit mode vertices/edges/faces appear outside of Clipping Region but can't be selected. ![cfc18888682cee6580bb31c3751bbee6.png](https://archive.blender.org/developer/F8543674/cfc18888682cee6580bb31c3751bbee6.png) 2.81a ![d52f58073a71dc46b404b3cf6ff85f12.png](https://archive.blender.org/developer/F8543676/d52f58073a71dc46b404b3cf6ff85f12.png) 2.83 ![f4787fb04f7e5f97dbc32ecdbf19c35c.png](https://archive.blender.org/developer/F8543678/f4787fb04f7e5f97dbc32ecdbf19c35c.png) [ClipBug.blend](https://archive.blender.org/developer/F8543685/ClipBug.blend)
Author

Added subscriber: @item412

Added subscriber: @item412

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Cant redo:

  • OS: Linux 5.6.13-arch1-1
  • REV: ec86db82b0a6e01b94c9487953f81253d506a72a
  • GPU: GeForce GTX 1080

Tested 2.90 master & 2.82 release.

Could you try to redo this with factory settings?

Cant redo: * OS: Linux 5.6.13-arch1-1 * REV: `ec86db82b0a6e01b94c9487953f81253d506a72a` * GPU: `GeForce GTX 1080` Tested 2.90 master & 2.82 release. Could you try to redo this with factory settings?
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Also unable to reproduce:
Linux-5.4.0-7626-generic-x86_64-with-debian-bullseye
GTX 1050 Ti 440.82

Blender versions:
2.82a
2.83 dfe8195dfe (2020-05-19 23:15)
2.90 4f622c9a08 (2020-05-19 22:32)

Along with the factory defaults test that @ideasman42 suggested, are you also able to test updating your GPU drivers to the latest game ready driver from https://www.nvidia.com/Download/index.aspx

Also unable to reproduce: Linux-5.4.0-7626-generic-x86_64-with-debian-bullseye GTX 1050 Ti 440.82 Blender versions: 2.82a 2.83 `dfe8195dfe` (2020-05-19 23:15) 2.90 `4f622c9a08` (2020-05-19 22:32) Along with the factory defaults test that @ideasman42 suggested, are you also able to test updating your GPU drivers to the latest game ready driver from https://www.nvidia.com/Download/index.aspx
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm actually.

System Information
Operating system: Linux-5.5.13-200.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.64
version: 2.90 (sub 2), branch: master, commit date: 2020-05-20 05:00, hash: ec86db82b0

Having a clipping region defined in Solid Viewport Shading and going to Material Preview or Rendered will leave verts outside the previously defined region unselectable [but visible].
This is because the clipping region is disabled for Material Preview or Rendered [this is by design, see D6047 / 7878adf49c] - but suppose selection buffer is not updated?... Checking... [will also update my diver...]

Can confirm actually. **System Information** Operating system: Linux-5.5.13-200.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.64 version: 2.90 (sub 2), branch: master, commit date: 2020-05-20 05:00, hash: `ec86db82b0` Having a clipping region defined in `Solid` Viewport Shading and going to `Material Preview` or `Rendered` will leave verts outside the previously defined region unselectable [but visible]. This is because the clipping region is disabled for `Material Preview` or `Rendered` [this is by design, see [D6047](https://archive.blender.org/developer/D6047) / 7878adf49c] - but suppose selection buffer is not updated?... Checking... [will also update my diver...]
Author

GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

2.83 dfe8195dfe 2020-05-19 23:15

I installed latest game ready driver and loaded factory settings. Same thing.

bac4ac2f15724aa30957d2a5cba2dc70.png

GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 2.83 `dfe8195dfe` 2020-05-19 23:15 I installed latest game ready driver and loaded factory settings. Same thing. ![bac4ac2f15724aa30957d2a5cba2dc70.png](https://archive.blender.org/developer/F8544561/bac4ac2f15724aa30957d2a5cba2dc70.png)
Member

Added subscribers: @fclem, @Jeroen-Bakker

Added subscribers: @fclem, @Jeroen-Bakker
Member

Was actually mentioned as TODO in 7878adf49c

There are a few areas in the tooling (select, projection painting) that still needs to be tackled after this patch.

@Jeroen-Bakker, @fclem: not sure this is accepted as Bug then?

Was actually mentioned as TODO in 7878adf49c > There are a few areas in the tooling (select, projection painting) that still needs to be tackled after this patch. @Jeroen-Bakker, @fclem: not sure this is accepted as Bug then?
Member

Sorry, I missed a step. Yes, I can reproduce the issue. But like @lichtwerk said, this seems to be by design. I'll leave decisions on what to do with this report to the developers and other moderators.

Sorry, I missed a step. Yes, I can reproduce the issue. But like @lichtwerk said, this seems to be by design. I'll leave decisions on what to do with this report to the developers and other moderators.
Jeroen Bakker self-assigned this 2020-05-22 07:50:30 +02:00
Member

I would accept it as a bug as noted in the patch there are areas mentioned that still needed to be updated.

I would accept it as a bug as noted in the patch there are areas mentioned that still needed to be updated.

This issue was referenced by c26cd6e996

This issue was referenced by c26cd6e996d751bb3011976f03e7ee8c508ac3c5

This issue was referenced by 4622434c34

This issue was referenced by 4622434c348c6b1648bdcf911898f45ff3cd4d4c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76894
No description provided.